# loopback-litmus

./: .gitignore  BENCHMARK_RESULTS.md  DEMAND_EVIDENCE.md  DISCOVERABILITY.md  EVALUATION_PLAN.md  PRODUCT_SPEC.md  README.md  RELEASE_NOTES.md  VALIDATION_RESULTS.md  pyproject.toml
.github/workflows/: test.yml
scripts/: benchmark.py
src/loopback_litmus/: __init__.py  browser_harness.py  cli.py  fixtures.py  models.py  ports.py  probes.py  render.py  scanner.py
tests/: test_browser_harness.py  test_parsers.py  test_scan_fixtures.py
